landing_page.css
* {
    box-sizing: border-box;
    font-family: 'Sans';
    text-decoration: none;
}
html, body, #main_demo {
    padding: 0;
    margin: 0;
    font-size: 16px;
    max-width: 1920px;
    margin: auto;
}
.header a {
    color: #4e5058;
}
.demo a, .schedule_purple a, .head_sch a {
    color: white;
}
.login {
    color: black;
}
.learn_more a {
    color: #000ff0;
}
.display_flex {
    display: flex;
}
.display_grid {
    display: grid;
}
.header {
    width: 100%;
    height: 50px;
    font-size: 15px;
    color: #4e5058;
    padding-left: 10%;
    padding-right: 10%;
    background-color: #f6f9fbf5;
    box-shadow: 0 200px 500px;
}
.header > div {
    margin-right: 40px;
    margin-top: 20px;
}
.header > div:nth-child(1) {
    margin-top: 13px;
}
.logo {
    width: 110px;
    height: 34px;
}
.login_demo {
    flex-grow: 1;
    flex-direction: row-reverse;
}
.login_demo > div:nth-child(2) {
    margin-right: 20px;
}
.login_demo > div:nth-child(2) > div{
    margin-right: 5px;
}
.login_demo > div:nth-child(2) > div:nth-child(2){
    margin-right: 5px;
}
.schedule_orange {
    background-color: #ff7846;
    height: 36px;
    width: 180px;
    text-align: center;
    justify-content: center;
    margin-top: -10px;
    color: white;
    border-radius: 3px;
}
.schedule_orange i, .login_demo i {
    margin-top: 10px;
}
.demo{
    margin-top: 9px;
    margin-right: 5px;
}
/* dropdown_product */
.header_dropdown_product {
    padding-left: 10%;
    padding-top: 1.5%;
    background-color: #f9f9f9;
    display: none;
    z-index: +9999;
}
.dropdown_content > div{
    font-size: 14px;
    width: 250px;
    height: 270px;
    line-height: 30px;
    color: #000ff0;
}
.dropdown_content > div > div:nth-child(1){
    color: black;
    font-weight: 600;
}
.dropdown_content > div:nth-child(3){
    margin-left: -50px;
}
.dropdown_content > div:nth-child(5){
    margin-left: -30px;
}
.header_dropdown_solutions {
    display: none;
    padding-left: 10%;
    padding-top: 1.5%;
    background-color: #f9f9f9;
}
.drop_sol > div { 
    width: 190px;
}
.drop_sol > div:nth-child(2) {
    margin-left: -70px;
}
.drop_sol > div:nth-child(5) {
    margin-left: 5px;
}
/* colored subscription CSS */
.colored_sub {
    font-size: 48px;
    text-align: center;
    line-height: 0px;
    padding-top: 120px;
    height: 460px;
}
.colored_sub > h5:nth-child(1) {
    color: #500ad2;
}
.colored_sub > p {
    font-size: 15px;
    line-height: 10px;
}
.sch_signup_btn {
    font-size: 20px;
    justify-content: center;
    margin-top: 50px;
}
.sch_signup_btn > div {
    height: 54px;
    flex-basis: 200px;
    margin-left: 15px;
    margin-right: 15px;
    justify-content: center;
    font-weight: 500;
    border-radius: 5px;
    border: 1px solid #500ad2;
    color: #500ad2;
    align-items: center;
}
.sign_i {
    padding-left: 10px;
}
.sch_signup_btn > div:nth-child(1), .schedule_purple {
    flex-basis: 240px;
    font-size: 20px;
    color: white;
    background-color: #500ad2;
}
.schedule_purple p {
    margin-left: 15px;
    margin-right: 15px;
}

/* Automate _text, Smarter_text, Streamline_txt */

#data_analysis {
    width: 100%;
    height: 1800px;
}
.automate {
    grid-template: "left right";
    gap: 50px;
    padding-left: 20%;
    padding-right: 20%;
    height: auto;
    padding-top: 150px;
}
.automate h5 {
    font-size: 20px;
    margin-top: 5px;
    margin-bottom: 5px;
}
.automate_text > p:nth-child(1) {
    color: #500ad2;
    font-size: 14px;
}
.automate_text, p:nth-child(3) {
    padding-right: 150px;
}
.automate_text {
    grid-area: left;
    margin-right: 0;
    padding-right: 0;
}
.automate_img {
    grid-area: right;
}
.automate_content {
    flex-direction: column;
    justify-content: space-between;
}
.check_box {
    display: flex;
    width: 200px;
}
.check_right {
    padding-left: 100px;
}
.check_box i {
    color: #78cb7c;
    margin-top: 15px;
    padding-right: 10px;
}
.learn_more {
    border: 1px solid #000ff0;
    width: 130px;
    height: 40px;
    border-radius: 5px;
    justify-content: center;
    align-items: center;
    color: #000ff0;
    font-size: 14px;
    margin-top: 23px;
}
.learn_more i {
    padding-top: 5px;
    margin-left: 10px;
    font-size: 20px;
}
.smarter {
    gap: 220px;
    padding-left: 13%;
}
.smarter_img {
    grid-area: left;
}
.smarter_text {
    grid-area: right;
}
/* back_blue */
#purple_main {
    width: 100%;
}
#slant_purple_top {
    width: 100%;
    height: 200px;
    background-color:#8a2be2;
    position: absolute;
    top: 2308px;
    left: 0;
    transform: skewY(-2.5deg);
    transform-origin: top left;
    z-index: -2;
}
#slant_blue_top {
    width: 100%;
    height: 200px;
    background-color: #2a1469;
    position: absolute;
    top: 2309px;
    left: 0;
    transform: skewY(-1.5deg);
    transform-origin: top left;
    z-index: -1;
}
#slant_purple_bottom {
    width: 100%;
    height: 200px;
    background-color:#8a2be2;
    position: absolute;
    top: 4562px;
    left: 0;
    transform: skewY(2.5deg);
    transform-origin: top left;
    z-index: -2;
}
#slant_blue_bottom {
    width: 100%;
    height: 200px;
    background-color: #2a1469;
    position: absolute;
    top: 4561px;
    left: 0;
    transform: skewY(1.5deg);
    transform-origin: top left;
    z-index: -1;
}
.back_blue {
    background-color: #2a1469;
    color: white;
    width: 100%;
    height: auto;
}
.title  {
    padding-left: 30%;
}
.heading > h1 {
    padding-top: 80px;
    padding-bottom: 0px;
    line-height: 25px;
}
.heading > h1:nth-child(2){
    margin-top: 0;
    padding-top: 0;
}
.back_blue > p {
    color: #8372af;
}
.back_blue > div:nth-child(2) {
    width: 50%;
    margin: 0 auto 0 auto;
}
#details {
    display: grid;
    grid-template: "left right";
    padding-left: 30%;
    padding-right: 30%;
    gap: 80px;
}
.details_left {
    grid-area: left;
}
.details_right {
    grid-area: right;
}
.details_left img {
    height: 50px;
}
.details_right img {
    height: 80px;
}
.details_c > p:nth-child(1){
    font-size: 14px;
    color: #ff7846;
}
.details_c > h4 {
    font-size: 20px;
}
.text_det_col {
    color: #9184b5;
}
#grid_line {
    width: 100%;
    height: 1.3px;
    background-color:#1f0d52;
    margin-top: 8px;
    margin-bottom: 8px;
}
.preferred {
    background-color: #1f0d52;
    color: #bea7ff;
    font-size: 10px;
    width: 120px;
    height: 18px;
    border-radius: 9px;
    text-align: center;
}
.preferred p {
    padding-top: 4px;
}
.learn_details {
    background-color: white;
}
.details_syncs {
    padding-left: 30%;
    padding-top: 100px;
    padding-right: 50%;
}
.color_base {
    margin-top: 150px;
    color: white;
    justify-content: center;
}
.talk p {
    font-size: 22px;
}
.color_base > div {
    margin-right: 60px;
}
.color_base > div:nth-child(1){
    flex-basis: 260px;
    margin-top: 60px;
    height: 80px;
}
#base_line {
    width: 80%;
    background-color:  #716890;
    height: 1px;
    margin: auto;
    margin-top: 50px;
}
.base_head {
    font-size: 48px;
    width: 1000px;
    margin: auto;
    text-align: center;
    margin-top: 150px;
    padding-bottom: 50px;
}
.options {
    display: grid;
    grid-template: "left_up middle_up right_up"
                "left_down middle_down right_down";
    width: 350px;
    font-size: 14px;
    gap: 20px;
    margin: auto;
    padding-bottom: 180px;
    color: #716890;
}
.options >div:nth-child(1) {
    grid-area: left_up;
    color: white;
}
.options >div:nth-child(2) {
    grid-area: middle_up;
}
.options >div:nth-child(3){
    grid-area: right_up;
}
.line_left {
    grid-area: left_down;
}
.line_middle{
    grid-area: middle_down;
    display: none;
}
.line_right {
    grid-area: right_down;
    display: none;
}
.under_line {
    width: 60px;
    height: 2px;
    background-color: white;
    margin: auto;
}

/* Reviews */

#reviews {
    width: 100%;
    height: 200px;
}
.review {
    max-width: 1050px;
    background-color: white;
    border-radius: 8px;
    margin: auto;
}
#rethink_pricing {
    position: absolute;
    top: 4600px;
    left: 23%;
    box-shadow: 0.05rem 0.05rem rgba(0, 0, 0, 0.315);
}
.review_read {
    color: white;
    background-color: #3a8181;
    width: 400px;
    height: 450px;
    padding-left: 50px;
    padding-top: 70px;
    border-radius: 8px 60px 60px 8px;
}
.review_read > p {
    font-size: 14px;
}
.review_read > p:nth-child(3) {
    font-size: 20px;
}
.read_line {
    width: 80px;
    height: 1.11px;
    background-color: white;
    margin-top: 20px;
    margin-right: 10px;
}
.read_story {
    border: 1px solid white;
    padding: 10px;
    height: 40px;
    border-radius: 4px;
}
.read_story > p {
    margin-top: 0;
}
.read_story i {
    margin-top: 2px;
    margin-left: 10px;
}
.review_txt {
    padding-top: 20px;
    padding-left: 80px;
    padding-right: 30px;
    max-width: 55%;
}
.review_txt > p{
    font-size: 24px;
}
.review_txt > h4 {
    font-size: 26px;
    padding-top: 30px;
}
.review_txt > div {
    padding-left: 55%;
    margin-top: -35px;
}
.review_txt img {
    width: 150px;
    height: 40px;
}
.txt_ayush {
    background-color: #242565;
}
.txt_val {
    background-color: #bc7e0f;
}
#automate_finops {
    position: absolute;
    top: 4600px;
    left: 23%;
    display: none;
}
#go_global {
    position: absolute;
    top: 4600px;
    left: 23%;
    display: none;
}

/* bottom head */

.bottom_head {
    padding-top: 200px;
    width: 1400px;
    margin: auto;
}
.bottom_head > h5{
    font-size: 36px;
    width: 700px;
    margin-right: 33%;
}
.head_sch {
    margin-top: 80px;
    background-color: #500ad2;
    flex-basis: 240px;
    font-weight: 500;
    justify-content: center;
    height: 54px;
    font-size: 20px;
    border-radius: 5px;
    color: white;
    align-items: center;
}
.head_sch i {
    margin-top: 7px;
    padding-left: 5px;
}

/* Services */

.comp_services {
    width: 80%;
    margin: auto;
    margin-top: 80px;
    margin-left: 19%;
}
.comp_services > div {
    font-size: 16px;
    flex-basis: 250px;
    margin-right: 100px;
    line-height: 30px;
    justify-content: center;
    color:  #000ff0;
}
.comp_services p {
    font-size: 18px;
    color: black;
    font-weight: 500;
}
.comp_services i {
    color: black;
    margin-top: 22px;
    padding-left: 5px;
}

/* footer */

#footer {
    margin-top: 99px;
    display: flex;
    padding-left: 19%;
    padding-right: 19%;
    padding-bottom: 100px;
    flex-basis: 300px;
}
#footer > div {
    flex-basis: 150px;
}
#footer > div:nth-child(2){
    display: flex;
    flex-direction: row-reverse;
    flex-grow: 1;
}
.social_logo {
    width: 30px;
    height: 30px;
    margin-left: 10px;
}

/* media queries */

@media (max-width:992px) {
    body {
        max-width: 900px;
    }
    .colored_sub {
        font-size: 36px;
    }
    #data_analysis {
        max-width: 900px;
        padding: 0;
        height: auto;
    }
    .automate {
        grid-template: "right"
                    "left";
        max-width: 500px;
        border: 1px solid red;
    }
    .smarter {
        grid-template: "left"
                    "right";
    }

    #slant_purple_top {
        top: 3435px;
    }
    #slant_blue_top {
        top: 3435px;
    }
}

